# openclaw-monitor

./: .gitignore  BUILD.md  README.md  build-all.sh  index.html  package-lock.json  package.json  plan.md  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
