[package]
name = "openclaw-monitor"
version = "0.1.0"
description = "OpenClaw 系统监控仪表盘"
authors = ["you"]
license = ""
repository = ""
default-run = "openclaw-monitor"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
